<resources>
    <string name="app_name">My Application School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_classroom">ClassRoom</string>
    <string name="menu_exam">exam</string>
    <string name="menu_logo_off">LogoOff</string>
    <string name="menu_marks_students">MarksStudents</string>
    <string name="menu_mony_file">MonyFile</string>
    <string name="menu_presence">Presence</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_student_activity">StudentActivity</string>
    <string name="menu_student_record">StudentRecord</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="add_new_teacher">Add New Teacher</string>
    <string name="add_new_student">Add New Student</string>
    <string name="class_number">Class Number</string>

    <!--Array-->
    <string-array name="classes">
        <item>الصف الأول</item>
        <item>الصف الثاني</item>
        <item>الصف الثالث</item>
    </string-array>
    <!--Array-->

    <!--Spinner-->
    <string-array name="spinnerCurrentClass">
        <item>الصف الأول</item>
        <item>الصف الثاني</item>
        <item>الصف الثالث</item>
    </string-array>
    <!--Spinner-->

    <!--Spinner-->
    <string-array name="spinnerSkills">
        <item>كرة قدم</item>
        <item>سباحة</item>
        <item>رسم</item>
        <item>تنس</item>
    </string-array>
    <!--Spinner-->
    <string-array name="sectionCurrentClass">
        <item>(أ)</item>
        <item>(ب)</item>
        <item>(ج)</item>
        <item>(د)</item>
        <item>(ه)</item>
        <item>(و)</item>
        <item>(ز)</item>
        <item>(ي)</item>
    </string-array>
</resources>